Require explicit plugin compatibility versions in v1 jobs